Ajout de la présence du .exe pour le numéro de version + modification du numéro de build en 0.1.0 #24

--- a/Intune Group Assignments/Intune Group Assignments - Backup.csproj
+++ b/Intune Group Assignments/Intune Group Assignments - Backup.csproj
@@ -14,7 +14,7 @@
 	<UseWinUI>true</UseWinUI>
     <EnableMsixTooling>true</EnableMsixTooling>
     <FileVersion></FileVersion>
-    <Version>0.1.0</Version>
+    <Version>$(VersionPrefix)</Version>
   </PropertyGroup>
   <ItemGroup>
     <Content Remove="Assets\logo-hFTJgDNbK-transformed.png" />
