--- a/Intune Group Assignments/Intune Group Assignments.csproj
+++ b/Intune Group Assignments/Intune Group Assignments.csproj
@@ -17,6 +17,7 @@
     <Version>0.1.0</Version>
     <SelfContained>true</SelfContained>
     <WindowsAppSDKSelfContained>true</WindowsAppSDKSelfContained>
+    <WindowsPackageType>None</WindowsPackageType>
   </PropertyGroup>
   <ItemGroup>
     <Content Remove="Assets\logo-hFTJgDNbK-transformed.png" />
