--- a/Intune Group Assignments.Core/Intune Group Assignments.Core.csproj
+++ b/Intune Group Assignments.Core/Intune Group Assignments.Core.csproj
@@ -5,6 +5,8 @@
     <Platforms>AnyCPU;x64;x86</Platforms>
     <Platforms>x86;x64;arm64;AnyCPU</Platforms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <RuntimeIdentifiers>win10-x86;win10-x64;win10-arm64</RuntimeIdentifiers>
+    <SelfContained>true</SelfContained>
   </PropertyGroup>
 
   <ItemGroup>
