--- a/Intune Group Assignments.Core/Intune Group Assignments.Core.csproj
+++ b/Intune Group Assignments.Core/Intune Group Assignments.Core.csproj
@@ -7,6 +7,7 @@
     <RuntimeIdentifiers>win10-x86;win10-x64</RuntimeIdentifiers>
     <SelfContained>true</SelfContained>
     <SupportedOSPlatformVersion>10.0.19041.0</SupportedOSPlatformVersion>
+    <Configurations>Debug;Release</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
