--- a/Intune Deployment Monitor/Intune Deployment Monitor.csproj
+++ b/Intune Deployment Monitor/Intune Deployment Monitor.csproj
@@ -35,6 +35,7 @@
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
     <PackageReference Include="CommunityToolkit.WinUI" Version="7.1.2" />
     <PackageReference Include="CommunityToolkit.WinUI.UI.Controls" Version="7.1.2" />
+    <PackageReference Include="Markdig" Version="0.33.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     <PackageReference Include="Microsoft.Identity.Client" Version="4.27.1" />
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.4.231115000" />
