--- a/Intune Deployment Monitor/Intune Deployment Monitor.csproj
+++ b/Intune Deployment Monitor/Intune Deployment Monitor.csproj
@@ -24,6 +24,7 @@
   <ItemGroup>
     <None Remove="Views\AllDataPage.xaml" />
     <None Remove="Views\DetailsPage.xaml" />
+    <None Remove="Views\DetailsViews\CP_DetailsPage.xaml" />
   </ItemGroup>
 
   <ItemGroup>
@@ -55,6 +56,9 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <Page Update="Views\DetailsViews\CP_DetailsPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Update="Views\AllDataPage.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -67,5 +71,9 @@
     <Page Update="Views\AllDataPage.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Models\DetailsModels\" />
+    <Folder Include="ViewModels\DetailsViewModels\" />
   </ItemGroup>
 </Project>
